# sheets_to_ipxact

./: .gitignore  LICENSE  NOTICE  README.md  build.ps1  build.sh  bundle.ps1  bundle.sh  example.xlsx  pyproject.toml
config/: common.toml
irgen/: pyproject.toml
irgen/src/irgen/: attribute.py  config.py  jpath.py  main.py  parser.py  regvue.py  template.py
java/: pom.xml
java/src/main/java/org/example/: IpXactVersion.java  XmlGenerator.java
java/src/main/java/org/example/schema/s1685_2009/: AbstractionDefPortConstraintsType.java  AbstractionDefinition.java  AbstractorBusInterfaceType.java  AbstractorGenerators.java  AbstractorModeType.java  AbstractorModelType.java  AbstractorPortType.java  AbstractorPortWireType.java  AbstractorType.java  AbstractorViewType.java  AccessType.java  AdHocConnection.java  AdHocConnections.java  AddrSpaceRefType.java  AddressBankType.java  AddressBlockType.java  AddressSpaces.java  BankAlignmentType.java  BankedBankType.java  BankedBlockType.java  BankedSubspaceType.java  BaseAddress.java  BitSteeringType.java  BusDefinition.java  BusInterfaceType.java  BusInterfaces.java  CellClassValueType.java  CellFunctionValueType.java  CellSpecification.java  CellStrengthValueType.java  Channels.java  Choices.java  ClockDriver.java  ClockDriverType.java  ComponentGenerator.java  ComponentGenerators.java  ComponentInstance.java  ComponentInstances.java  ComponentPortDirectionType.java  ComponentType.java  (+78 more)
java/src/main/java/org/example/schema/s1685_2014/: AbstractionDefPortConstraintsType.java  AbstractionDefinition.java  AbstractionTypes.java  AbstractorBusInterfaceType.java  AbstractorGenerators.java  AbstractorModeType.java  AbstractorModelType.java  AbstractorPortType.java  AbstractorPortWireType.java  AbstractorType.java  AccessType.java  ActiveInterface.java  AdHocConnection.java  AdHocConnections.java  AddrSpaceRefType.java  AddressBankType.java  AddressBlockType.java  AddressSpaces.java  AlternateRegisters.java  ApiType.java  Assertion.java  Assertions.java  BankAlignmentType.java  BankedBankType.java  BankedBlockType.java  BankedSubspaceType.java  BusDefinition.java  BusInterfaceType.java  BusInterfaces.java  Catalog.java  CellClassValueType.java  CellFunctionValueType.java  CellSpecification.java  CellStrengthValueType.java  Channels.java  Choices.java  ClockDriver.java  ClockDriverType.java  ComplexBaseExpression.java  ComplexBitSteeringExpression.java  (+147 more)
java/src/main/java/org/example/schema/s1685_2022/: AbstractionDefPortConstraintsType.java  AbstractionDefinition.java  AbstractionTypes.java  AbstractorBusInterfaceType.java  AbstractorGenerators.java  AbstractorModeType.java  AbstractorModelType.java  AbstractorPortStructuredType.java  AbstractorPortTransactionalType.java  AbstractorPortType.java  AbstractorPortWireType.java  AbstractorSubPortType.java  AbstractorType.java  AccessPolicies.java  AccessPropertiesType.java  AccessRestrictionType.java  AccessRestrictionsType.java  AccessType.java  ActiveInterface.java  AdHocConnection.java  AdHocConnections.java  AddrSpaceRefType.java  AddressBankDefinitionType.java  AddressBankType.java  AddressBlockDefinitions.java  AddressBlockRef.java  AddressBlockType.java  AddressSpaces.java  AlternateRegisterRef.java  AlternateRegisters.java  ApiType.java  Array.java  Arrays.java  Assertion.java  Assertions.java  BankAlignmentType.java  BankDefinitions.java  BankRef.java  BankedBankType.java  BankedBlockType.java  (+209 more)
python/: README.md  pyproject.toml
python/src/: main.py
python/src/utils/: attribute.py  parser.py
python/stubs/jpype-stubs/: __init__.pyi
python/stubs/org-stubs/: __init__.pyi
python/stubs/org-stubs/example/: __init__.pyi
python/stubs/org-stubs/example/schema/: __init__.pyi
python/stubs/org-stubs/example/schema/s1685_2009/: __init__.pyi
python/stubs/org-stubs/example/schema/s1685_2014/: __init__.pyi
python/stubs/org-stubs/example/schema/s1685_2022/: __init__.pyi
schema/: pom.xml
schema/src/main/java/org/example/: XmlGenerator.java
schema/src/main/java/org/ieee/ipxact/v2009/: AbstractionDefPortConstraintsType.java  AbstractionDefinition.java  AbstractorBusInterfaceType.java  AbstractorGenerators.java  AbstractorModeType.java  AbstractorModelType.java  AbstractorPortType.java  AbstractorPortWireType.java  AbstractorType.java  AbstractorViewType.java  AccessType.java  AdHocConnection.java  AdHocConnections.java  AddrSpaceRefType.java  AddressBankType.java  AddressBlockType.java  AddressSpaces.java  BankAlignmentType.java  BankedBankType.java  BankedBlockType.java  BankedSubspaceType.java  BaseAddress.java  BitSteeringType.java  (+95 more)
src/: main.py
src/utils/: attribute.py  dict_xml.py  generate.py  parser.py  schema.py
tests/: test_dict_xml.py
(+436 files in other folders)
