[project]
name = "sheets_to_ipxact"
version = "0.1.0"
description = "convert register description spreadsheets in a specific format into IP-XACT XML"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.14.0",
    "lxml>=6.0.0",
    "mypy>=1.17.0",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-xml>=2.17.3",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[project.urls]
Repository = "https://github.com/BeriBeli/sheets_to_ipxact"

[project.scripts]
sheets_to_ipxact = "main:main"

[tool.uv]
package = true