[project]
name = "ipxact_register_generator"
version = "0.6.0"
description = "convert register description spreadsheets into IP-XACT XML files."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.14.0",
    "jpype1>=1.6.0",
    "mypy>=1.17.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[project.urls]
Repository = "https://github.com/BeriBeli/ipxact-register-generator"

[project.scripts]
irgen = "main:main"

[tool.uv]
package = true
